- populate sign collection - GET signs api
