# server/api/controllers/sign/sign.router.js
@@ -1,0 +1,7 @@
+import * as express from 'express';
+import controller from './sign.controller';
+
+export default express
+  .Router()
+  .get('/', controller.getAllSign);
+
