# server/common/server.js
@@ -6,6 +6,7 @@ import * as os from 'os';
 import cookieParser from 'cookie-parser';
 import swaggerify from './swagger';
 import l from './logger';
+import SignService from '../api/services/sign.service';
 
 const app = new Express();
 const morgan = require('morgan');
@@ -34,6 +35,8 @@ export default class ExpressServer {
     app.use(Express.static(`${root}/build/public`));
 
     app.use(boom());
+
+    SignService.populateSignTable();
   }
 
   router(routes) {
